# wayland-tracer

./: .gitignore  CMakeLists.txt  README.md  clone.sh  meson.build  meson_options.txt
src/: connection.c  frontend-analyze.c  frontend-analyze.h  frontend-bin.c  frontend-bin.h  tracer-analyzer.c  tracer-analyzer.h  tracer.c  tracer.h  wayland-os.c  wayland-os.h  wayland-util.c
src/wayland/: README.md  connection.c  connection.h  wayland-os.c  wayland-os.h  wayland-private.h  wayland-util.c  wayland-util.h
